# WORKSPACE-GUARD

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  Cargo.toml  Containerfile.test  Makefile  README.md  REQUIREMENTS.md  RESEARCH.md  build.rs  moon.yml  quality_exceptions.yaml
config/: agent-git-identity.example  ambient-allowlist.yaml  banned_words_exceptions.yaml  binary-lock.yaml  binary-policy-rules.yaml  boot_layout.yaml  cap-allowlist.yaml  coverage_thresholds.yaml  dead_code.yaml  dependency_excludes.yaml  duplicate_dependency_excludes.yaml  file_length_limits.yaml  git_ssh_allowlist.yaml  guard-host-profiles.yaml  guard_attack_surface_matrix.yaml  guard_config_keys.schema.yaml  guard_config_keys.yaml  guard_environment.schema.yaml  guard_environment.yaml  guard_locked_paths.schema.yaml  guard_locked_paths.yaml  guard_paths.schema.yaml  guard_paths.yaml  guard_policy_matrix.schema.yaml  guard_policy_matrix.yaml  guard_protected_branches.schema.yaml  guard_protected_branches.yaml  guard_resource_limits.schema.yaml  guard_resource_limits.yaml  guard_subcommands.schema.yaml  guard_subcommands.yaml  home-lock-users.schema.yaml  home-lock-users.yaml.example  host-provision.schema.yaml  host-provision.yaml.example  sensitive_files_exceptions.yaml  system-deps.yaml
docs/: GAP-ANALYSIS-HARD-NUKE.md  OPERATOR-RUNBOOK.md  OPERATOR.md  PLAN-GUARD-DEPLOYMENT-RECONCILIATION.md  RESEARCH-SYSTEM-BINARIES.md  ROOT-ONLY-MODE.md
res/: binary-lock.yaml  canonical-sources.sha256  cve-catalog.yaml  drift-report.yaml  fcap-baseline.yaml  suid-baseline.yaml
scripts/: config-lock.sh  generate-hooks.sh  guard-operator.sh  home-drift-check  install-home-lock  install-lock-runtime  provision-host  provision-user-git-identity  regen-gitleaksignore  suid-drift-check  sync-gtfobins  test-in-podman.sh  uninstall-home-lock  uninstall-lock-runtime
src/: agent_identity.rs  agent_identity_tests.rs  args.rs  args_tests.rs  attack_surface_tests.rs  binary_guard.rs  binary_guard_tests.rs  binary_policy_types.rs  block.rs  block_bypass_env_tests.rs  block_checkout_tests.rs  block_tests.rs  (+19 more)
(+97 files in other folders)
