[package]
name = "workspace-guard"
version = "0.1.0"
edition = "2021"
description = "Capability-based guard framework — blocks destructive commands, sanitises env, enforces WORKSPACE-CI contracts. Git PoC."

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "workspace-guard"
path = "src/main.rs"

[dependencies]
libc = "0.2"
caps = { version = "0.5", optional = true }

[features]
default = ["capability-mode"]
capability-mode = ["caps"]
root-only = []

[dev-dependencies]
tempfile = "3"
