[package]
name = "workspace-guard"
version = "0.1.0"
edition = "2021"
description = "Capability-based guard framework: blocks destructive commands, sanitises env, enforces WORKSPACE-CI contracts. Git PoC."

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "workspace-guard"
path = "src/main.rs"

[[bin]]
name = "workspace-git-ssh"
path = "src/git_ssh.rs"

[[bin]]
name = "workspace-binary-guard"
path = "src/binary_guard.rs"
required-features = ["binary-guard"]

[dependencies]
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["user", "process", "signal", "resource", "fs"] }
caps = { version = "0.5", optional = true }
regex = { version = "1", optional = true }

[features]
default = ["capability-mode"]
capability-mode = ["caps"]
root-only = []
binary-guard = ["regex"]

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
libc = "0.2"
